--- a/source/scss/breakpoints.scss
+++ b/source/scss/breakpoints.scss
@@ -1,6 +1,5 @@
 
 @media (max-width: 1395px) {
-
     .container-big{
         max-width: 1240px;
     }
@@ -36,8 +35,10 @@
 @media (max-width: 575px) {
     .container {
         max-width: 100%;
+        padding: 0 15px;
     }
     .container-big{
         max-width: 100%;
+        padding: 0 15px;
     }
 }
