--- a/source/scss/choose.scss
+++ b/source/scss/choose.scss
@@ -6,10 +6,13 @@
 .choose {
 
     padding: 86px 0 32px 0;
-
-    &__wrap {
+    @media (max-width: 1199px){
+        padding-bottom: 100px;
     }
-
+    @media (max-width: 575px){
+        padding: 35px 0 24px 0 ;
+    }
+    
     &__title {
         font-family: SangBleu Kingdom;
         font-style: normal;
@@ -19,10 +22,21 @@
         color: #3D3C3C;
 
         margin-bottom: 50px;
+        @media (max-width: 575px){
+            font-size: 24px;
+            margin-bottom: 13px;
+        }
     }
 
     &__form-wrap {
         width: 100%;
+        @media (max-width: 1199px){
+            width: 80%;
+            margin: 0 auto;
+        }
+        @media (max-width: 575px){
+            width: 100%;
+        }
     }
 
     &__form {           //Форма
@@ -32,6 +46,11 @@
         border-radius: 8px;
         height: 80px;
         padding: 8px;
+        @media (max-width: 1199px){
+            flex-direction: column;
+            align-items: center;
+            height: 100%;
+        }
     }
     
     &__choosen__field {     //Общий стиль для полей
@@ -52,6 +71,10 @@
         background:#FFFFFF url(../../img/png/arrow.png) no-repeat right 14px center;
         padding: 12px 0 12px 16px; 
         margin-right: 8px;
+        @media (max-width: 1199px){
+            width: 100%;
+            margin: 0 0 8px 0;
+        }
     }
 
     &__date-input {
@@ -65,17 +88,28 @@
         background:#FFFFFF url(../../img/png/Vector.png) no-repeat right 14px center;
         padding: 14px 0 10px 16px; 
         margin-right: 8px;
+        @media (max-width: 1199px){
+            width: 100%;
+            margin: 0 0 8px 0;
+        }
     }
+     //Текстовое поле количества людей
+    &__number-label{
 
-
-    &__number-input { //Текстовое поле количества людей
         border: 1px solid #E3E3E3;
         width: 392px;
         height: 64px;
         -webkit-appearance : none;
         background:#FFFFFF url(../../img/png/Subtract.png) no-repeat right 14px center;
-        padding: 12px 0 12px 16px; 
+        padding: 16px 0 12px 16px; 
         margin-right: 8px;
+        @media (max-width: 1199px){
+            width: 100%;
+            margin: 0 0 8px 0;
+        } 
+        @media (max-width: 575px){
+            margin-bottom: 16px;
+        }
     }
 
     &__submit-btn { //Кнопка НАЙТИ submit
@@ -94,6 +128,15 @@
         background: #3D3C3C;
         border-top-right-radius: 8px;
         border-bottom-right-radius: 8px;
+
+        @media (max-width: 1199px){
+            margin: 0;
+            border-radius: 8px;
+            height: 64px;
+        }
+        @media (max-width: 575px){
+            width: 100%;
+        }
     }
 }
 
