--- a/source/scss/info.scss
+++ b/source/scss/info.scss
@@ -1,9 +1,11 @@
 .info {
 
-    
-
     padding: 86px 0 96px 0;
     position: relative;
+    @media (max-width: 575px){
+        padding-bottom:72px ;
+        margin-bottom: 48px;
+    }
         &::before{
             position: absolute;
             content: "";
@@ -21,8 +23,10 @@
             background: transparent url(../../img/png/vectorone.png) no-repeat top center;
             width: 100%;
             height: 40px;
+            @media (max-width: 575px){
+                top:180px;
+            }
         }
-    
 
     &__wrap {
         max-width: 640px;
@@ -39,6 +43,11 @@
         color: #3D3C3C;
 
         margin-bottom: 124px;
+        @media (max-width: 575px){
+            font-size: 24px;
+            line-height: 32px;
+            margin-bottom: 100px;
+        }
     }
 
     &__text {
