--- a/source/scss/section.scss
+++ b/source/scss/section.scss
@@ -1,4 +1,4 @@
-// Header-navigation   Общие стили с основной
+// Header-navigation   Общие стили компонентов Header для меню и основного хедера
 
 .header__wrap{
     display: flex;
@@ -6,14 +6,6 @@
     min-height: 80px;
     margin: 0;
     padding: 0;
-}
-
-.header__logo{
-
-}
-
-.header__logo-pic{
-
 }
 
 .header__list{
@@ -24,7 +16,6 @@
 }
 
 .header__item{
-
     margin-right: 64px;
     &:last-child{
         margin-right: 0;
@@ -41,7 +32,7 @@
     text-transform: uppercase;
 }
 
-.header__link-enter{
+.header__link-enter{  // Кнопка вход КЛЮЧ
     font-family: Euclid Circular B;
     font-style: normal;
     font-weight: 500;
@@ -61,6 +52,21 @@
         background: transparent url(../../img/png/key.png) no-repeat left center;
         width: 100%;
         height: 100%;
+        @media (max-width: 575px){
+            background: transparent url(../../img/png/keyblack.png) no-repeat left center;
+            width: 80px;
+            height: 80px;
+            top:32;
+            left:28px
+        }
+    }
+    @media (max-width: 575px){
+        font-size: 0;
+        width: 80px;
+        height: 80px;
+        border-bottom: none;
+        border-left: 1px solid rgba(61, 60, 60, 0.08);
+        margin: 0;
     }
 }
 
