--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -14,15 +14,17 @@ body{
     height: auto;
     z-index: -1;
     position: relative;
+    @media (max-width: 575px){
+        background:transparent url(../../img/png/flower_strokemobile.png) no-repeat right top;
+    }
 
-    &::after {
+    &::after {      //Для подгрузки изображений
         display: none;
-        content: url(../../img/png/flower.png),
-        url(../../img/png/flowertwo.png),
+        content: url(../../img/png/flower.png)
+        url(../../img/png/flowertwo.png)
         url(../../img/png/flowerthree.png);
     }
 
-    
     &::before{
         position: absolute;
         content: "";
@@ -54,10 +56,16 @@ body{
                 background:transparent url(../../img/png/flowerthree.png) no-repeat right top;
             }
         }
+        @media (max-width: 575px){
+            animation: none;
+            background: transparent url(../../img/png/Intersectmobile.png)no-repeat right top;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: -66px;
+        }
     }
 }
-
-
 
 // Section---------->
 @import "section.scss";
@@ -96,6 +104,10 @@ body{
 
 // Menu---------->
 @import "menu.scss";
+
+// MobileMenu---------->
+@import "mobileMenu.scss";
+
 
 // Slider---------->
 @import "slider.scss";
