--- a/source/scss/tabs.scss
+++ b/source/scss/tabs.scss
@@ -2,10 +2,14 @@
 
     width: 100%;
     padding-bottom: 96px;
+    @media (max-width: 575px){
+        padding-bottom: 72px;
+    }
 
     &__content {  //Обертка с карточками
         display: flex;
         overflow-x: scroll;
+        
         padding-bottom: 15px;
         &::-webkit-scrollbar{
             background-color: transparent;
@@ -16,6 +20,11 @@
         &::-webkit-scrollbar-thumb{
             background: #BCA56A;
             border-radius: 8px;
+        }
+        @media (max-width: 575px){
+            display: flex;
+            flex-direction: column;
+            overflow-x: none;
         }
     }
 
@@ -34,6 +43,7 @@
         &:hover {
             color:  #BCA56A;
         } 
+        white-space: nowrap;
     }
     &__button.active{
         color:  #BCA56A;
@@ -42,19 +52,26 @@
             content:'';
             position: absolute;
             background: #BCA56A;
-            bottom:-18px;
+            bottom:-10px;
             left:0;
             height: 3px;
             width: 100%;
+            @media (max-width: 767px){
+                bottom:-10px;
+                height: 3px;
+            }
+
         }
     }
 
-   
-
-    &__buttons {
+    &__control {
         float: right;
         width: 90px;
         height: 40px;
+        @media (max-width: 767px){
+            display: none;
+        }
+        
     }
 
     &__btn-left {
@@ -81,6 +98,17 @@
             bottom:0;
             width: 100%;
             height: 100%;
+        }
+        @media (max-width: 575px){
+            margin-right: 0;
+            margin-bottom: 32px;
+        }
+    }
+
+    &__img{
+        @media (max-width: 575px){
+            width: 100%;
+            height: auto;
         }
     }
 
@@ -115,9 +143,6 @@
         max-width: 176px;
     }
 
-    &__poster {
-    }
-
     &__card-category {    //Карточка категорий отдыха
         position: relative;
         margin-right: 40px;
@@ -130,6 +155,11 @@
             bottom:0;
             width: 100%;
             height: 100%;
+        }
+        @media (max-width: 575px){
+            width: 100%;
+            height: auto;
+            margin-bottom: 32px;
         }
     }
 
@@ -152,13 +182,21 @@
 }
 
 .tab {
-    overflow: hidden;
+    
     border-bottom: 1px solid rgba(61, 60, 60, 0.08);
     padding:10px 0 6px 0;
     margin-bottom: 32px;
+    @media (max-width: 767px){
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: scroll;
+        &::-webkit-scrollbar{
+            height: 7px;
+            cursor: pointer;
+        }
+        padding: 10px 0 10px 0;
+    }
 }
-
-/* Стиль содержимого вкладки */
 
 .tabcontent {
     display: none;
