--- a/source/scss/menu.scss
+++ b/source/scss/menu.scss
@@ -295,26 +295,8 @@
         }
     }
 
-    &__content-title {
-        font-family: Euclid Circular B;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 24px;
-        line-height: 32px;
-        color: #FFFFFF;
-        text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.32);
-
-        margin-bottom: 32px;
-        @media (max-width: 1395px) {
-            font-size: 20px;
-        }
-        @media (max-width: 991px){
-            font-size: 16px;
-            line-height: 20px;
-        }
-    }
-
     &__content-link {
+        display: block;
         font-family: Euclid Circular B;
         font-style: normal;
         font-weight: 300;
@@ -331,6 +313,11 @@
         @media (max-width: 991px){
             font-size: 16px;
             line-height: 20px;
+        }
+
+        margin-bottom: 32px;
+        &:last-child{
+            margin-bottom: 0;
         }
     }
 
