--- a/source/scss/mobileMenu.scss
+++ b/source/scss/mobileMenu.scss
@@ -205,31 +205,25 @@
         padding: 22px 0 22px 32px;
     }
 
-    &__title {
-        font-family: Euclid Circular B;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 24px;
-        color: #FFFFFF;
-        text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.32);
-
-        margin-bottom: 12px;
-    }
-
     &__link {
+        display: block;
         font-family: Euclid Circular B;
         font-style: normal;
         font-weight: 300;
         font-size: 16px;
         line-height: 32px;
-        color: #D9C287;
+        color: #ffffff;
         text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.32);
         &:focus{
             color: #D9C287;
         }
         &:hover{
             color: #D9C287;
+        }
+
+        margin-bottom: 12px;
+        &:last-child{
+            margin-bottom: 0;
         }
     }
 
