--- a/source/scss/choose.scss
+++ b/source/scss/choose.scss
@@ -137,6 +137,11 @@
         @media (max-width: 575px){
             width: 100%;
         }
+
+        transition: 0.2s;
+        &:hover{
+            box-shadow: 0 0 5px 1px black;
+        }
     }
 }
 
